--- a/content/scenarios/workflow/resources/template.md.jinja
+++ b/content/scenarios/workflow/resources/template.md.jinja
@@ -1,16 +1,15 @@
 +++
-title = "Scenario: {{ name }}"
+title = "{{ name }}"
+weight = 1
 +++
 
 {{ desc }}
-
-## Scenario
 
 ```yaml
 {{ scenario }}
 ```
 
-{% if prior_plots is not none %}
+{% if prior_plots|length %}
 ## Prior probabilities
 <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
 <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
